# jupypress

./: .eslintrc.json  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  install.json  jest.config.js  package.json  pyproject.toml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: AGENTS.md  BACKEND_STRUCTURE.md  DEVELOPMENT.md  FRONTEND_STRUCTURE.md  RELEASE.md  TEST.md  theming.md
docs/images/: README.md
jupypress/: __init__.py  _version.py  cell_renderer.py  exporter.py  extension.py  handlers.py  metadata_utils.py  slide_builder.py
jupypress/templates/: .gitkeep  deck.html.j2
jupypress/templates/static/css/: base.css
jupypress/templates/static/js/: navigation.js
jupypress/templates/themes/default/: theme.css
jupypress/templates/themes/jupyterlab/: theme.css
jupyter-config/jupyter_server_config.d/: jupypress.json
schema/: plugin.json
src/: commands.ts  index.ts  service.ts  tokens.ts  toolbar.ts
src/components/: CellAssigner.tsx  CellPickerModal.tsx  DocsModal.tsx  JupyterLabPresentation.tsx  LayoutSelector.tsx  SlideEditorPanel.tsx  SlideItem.tsx  SlideList.tsx  ThemeEditor.tsx  index.ts
src/components/icons/: Icons.tsx
src/hooks/: useNotebookModel.ts
src/utils/: htmlBuilder.ts  kernelExecutor.ts  metadata.ts  outputRenderer.ts  slideMapper.ts
src/utils/css/: base.css.ts  theme.css.ts
src/utils/js/: navigation.js.ts
style/: index.css
tests/js/: htmlBuilder.test.ts  kernelExecutor.test.ts  metadata.test.ts  outputRenderer.test.ts  slideMapper.test.ts
tests/python/: conftest.py  test_cell_renderer.py  test_exporter.py  test_handlers.py  test_slide_builder.py
tests/python/notebooks/: sample.ipynb
